--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "jspdf-autotable": "^3.8.4",
     "mdb-react-ui-kit": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "react": ">=16.8.0",
     "react-bootstrap": "^2.4.0",
     "react-chartist": "^0.14.4",
     "react-chartjs-2": "^3.3.0",
