update fe be conn

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ DB_USERNAME = uaor8cxs8ymoomd3
 DB_PASSWORD = gFYdfvy2h1CsEjO5lp3n
 DB_DBNAME = b7e48ocqcbcthswikzus
 DB_PORT = 3306
+
+NODE_ENV=production
