--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,11 @@
     "jspdf-autotable": "^3.8.4",
     "mdb-react-ui-kit": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "react": ">=16.8.0",
+    "react": "16.8.0",
     "react-bootstrap": "^2.4.0",
     "react-chartist": "^0.14.4",
     "react-chartjs-2": "^3.3.0",
-    "react-dom": ">=16.8.0",
+    "react-dom": "16.8.0",
     "react-form-stepper": "^2.0.3",
     "react-icons": "^5.3.0",
     "react-js-pagination": "^3.0.3",
@@ -49,8 +49,8 @@
     "build:scss": "npm run compile:scss && npm run minify:scss"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": "16.8.0",
+    "react-dom": "16.8.0"
   },
   "browserslist": {
     "production": [
