--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,11 @@
     "jspdf-autotable": "^3.8.4",
     "mdb-react-ui-kit": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "react": "16.8.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-chartist": "^0.14.4",
     "react-chartjs-2": "^3.3.0",
-    "react-dom": "16.8.0",
+    "react-dom": "^17.0.2",
     "react-form-stepper": "^2.0.3",
     "react-icons": "^5.3.0",
     "react-js-pagination": "^3.0.3",
@@ -47,10 +47,6 @@
     "compile:scss": "sass src/assets/scss/light-bootstrap-dashboard-pro-react.scss src/assets/css/light-bootstrap-dashboard-pro-react.css",
     "minify:scss": "sass src/assets/scss/light-bootstrap-dashboard-pro-react.scss src/assets/css/light-bootstrap-dashboard-pro-react.min.css --style compressed",
     "build:scss": "npm run compile:scss && npm run minify:scss"
-  },
-  "peerDependencies": {
-    "react": "16.8.0",
-    "react-dom": "16.8.0"
   },
   "browserslist": {
     "production": [
